# stm32_template

./: .mxproject  CMakeLists.txt  README.md  STM32F072XX_FLASH.ld  stm32_template.ioc
Core/Src/: main.c
Drivers/: CMakeLists.txt
Drivers/SEGGER/: CMakeLists.txt
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
lab1/: CMakeLists.txt
lab1/Src/: stm32f0xx_hal_msp.c
lab2/: CMakeLists.txt
lab2/Src/: lab2.c
lab3/: CMakeLists.txt
lab4/: CMakeLists.txt
lab5/: CMakeLists.txt
lab5/Src/: stm32f0xx_it.c
lab6/: CMakeLists.txt
lab6/Inc/: main.h
lab7/: CMakeLists.txt
lab7/Inc/: stm32f0xx_it.h
